Fix nav dropdown alignment

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -11,7 +11,7 @@
 }
 
 #mainNav .navbar-nav{
-  background-color: #16161657;
+  background-color: #1616167c;
   border: #ffffe1;
 }
 
